--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "@angular/router": "^5.2.0",
     "core-js": "^2.4.1",
     "hammerjs": "^2.0.8",
+    "jquery": "^3.3.1",
     "rxjs": "^5.5.6",
+    "semantic-ui-css": "^2.2.12",
     "zone.js": "^0.8.19"
   },
   "devDependencies": {
@@ -34,6 +36,7 @@
     "@angular/language-service": "^5.2.0",
     "@types/jasmine": "~2.8.3",
     "@types/jasminewd2": "~2.0.2",
+    "@types/jquery": "^3.3.0",
     "@types/node": "~6.0.60",
     "codelyzer": "^4.0.1",
     "jasmine-core": "~2.8.0",
